﻿更新履歴

==== Ver 1.4.2-dev(xxxx/xx/xx)
 * NEW: システムのタイムゾーンの変更を検知して、ツイートの投稿日時などの表示を新しいタイムゾーンに同期します
 * NEW: 5月中旬に予定されている引用ツイートに関する Twitter API の仕様変更に対応
 * FIX: 動画のサムネイル画像に「URLをコピー」を行うとエラーが発生する不具合を修正

==== Ver 1.4.1(2017/11/12)
 * NEW: ツイート文字数の280文字への上限緩和に対応しました
  - Twitter公式クライアントなどと同様に、入力する文字種によって文字数の扱いが異なるものになります
  - DMの送信時に行われる文字数のカウントは従来通りのままです
 * NEW: 投稿欄に入力されたリプライと引用ツイートのURLが文字数カウントから除外されます
  - ツイートへの返信で入力された「@... 」や、引用ツイートのために入力されたツイートURLが240文字のカウントに含まれなくなります
  - リプライ以外で入力された、またはツイートの先頭以外に含まれる「@... 」は従来通り文字数のカウントに含まれます
  - ツイートURLについては、文末以外に入力した場合または画像投稿と組み合わせて投稿する場合には従来通り文字数のカウントに含まれます
 * NEW: プロフィール編集時に名前欄に50文字のテキストが入力可能になりました
 * CHG: 画像投稿の対応サービスから「img.ly」「yfrog」「ついっぷるフォト」を削除
  - アップデート前にこれらのサービスを投稿先に選択していた場合は「Twitter」に変更されます
 * CHG: 画像投稿のキャンセル時に選択中の画像表示を閉じないように動作を変更
 * FIX: 投稿欄の複数行表示が次回起動時に保持されない不具合を修正
 * FIX: 自分宛のリプライかつ画像のみのツイートを投稿した場合に先頭の「@... 」が除去されない不具合を修正 (thx @mino90h!)

==== Ver 1.4.0(2017/10/30)
 * NEW: 自分宛のリプライを送信する場合に先頭の「@... 」を除去します (返信先ツイートの情報は維持したまま投稿されます)
 * NEW: サムネイル画像のコンテキストメニューに「開く」「URLをコピー」を追加
 * NEW: ウィンドウ上部の「その他機能」メニューに「投稿設定」を追加
  - 右下の ▼ (POST動作切り替えメニュー) と同じ内容のメニューが表示されます
 * CHG: 自分宛のメンションを含むツイートがRTされた場合に、リプライとして扱わずReplyタブにも表示しないように変更 (thx @7mencho!)
 * CHG: Instagramについて img.azyobuzi.net を使用したサムネイルURLの取得を一時的に無効化
  - Instagram API の問題?によりサムネイルURLの取得に失敗するため
 * CHG: 最新バージョン情報の取得に使用するURLを変更 (HTTPS接続を使用する)
 * FIX: 起動時に復元したウィンドウ位置が画面領域外であった場合に、強制的にウィンドウを移動する動作が機能しない不具合を修正
 * FIX: TweetDeckから投稿されたツイートをFav追加・削除した場合にエラーが発生する問題を回避 (thx @Lolitapple!)
 * FIX: TLS1.1以降のみ有効なサーバーのHTTPS接続に失敗する問題を修正

==== Ver 1.3.9(2017/08/14)
 * CHG: Twemoji v2.3.0 に対応しました
  - Unicode 10.0/Emoji 5.0 で追加された絵文字が表示されるようになります
 * CHG: 「前データを取得」を v1.3.7 より前と同様の動作となるように戻しました
  - スリープからの復帰時など、一度の更新で取得しきれなかった分のツイートを取得したい場合に期待した動作とならないため
 * CHG: ふぁぼ追加時に Err:AlreadyFavorited エラーが発生した場合は成功と見なすようにしました
 * CHG: UserStreamsのイベント一覧画面で、イベントをダブルクリックした際に新規タブとして開く動作に変更しました
  - Favoriteなどツイートが関連するイベントではツイートの詳細を、それ以外ではユーザータイムラインを表示します
 * FIX: 発言一覧の先頭で「前を検索」を実行するとエラーが発生する不具合を修正
