@@ -124,7 +124,6 @@ namespace OpenTween
                     },
                     Type = "photo",
                     Id = 426404550379986940L,
-                    MediaUrl = "http://pbs.twimg.com/media/BerkrewCYAAV4Kf.png",
                     MediaUrlHttps = "https://pbs.twimg.com/media/BerkrewCYAAV4Kf.png",
                     Url = "http://t.co/h5dCr4ftN4",
                     DisplayUrl = "pic.twitter.com/h5dCr4ftN4",
@@ -154,7 +153,6 @@ namespace OpenTween
                     },
                     Type = "photo",
                     Id = 426404550379986940L,
-                    MediaUrl = "http://pbs.twimg.com/media/BerkrewCYAAV4Kf.png",
                     MediaUrlHttps = "https://pbs.twimg.com/media/BerkrewCYAAV4Kf.png",
                     Url = "http://t.co/h5dCr4ftN4",
                     DisplayUrl = "pic.twitter.com/h5dCr4ftN4",
