@@ -4,6 +4,7 @@
  * NEW: システムのタイムゾーンの変更を検知して、ツイートの投稿日時などの表示を新しいタイムゾーンに同期します
  * NEW: 5月中旬に予定されている引用ツイートに関する Twitter API の仕様変更に対応
  * FIX: 動画のサムネイル画像に「URLをコピー」を行うとエラーが発生する不具合を修正
+ * FIX: pic.twitter.com のサムネイル画像をHTTPS接続で取得するように修正
 
 ==== Ver 1.4.1(2017/11/12)
  * NEW: ツイート文字数の280文字への上限緩和に対応しました
